--- a/bio.html
+++ b/bio.html
@@ -72,7 +72,7 @@
                       
                        Les principaux professeurs de George sont Kyoko Hashimoto, titulaire de la chaire de piano à l'Université McGill, Angel Ramón Rivera du New England Conservatory, Paul Orgel de l'Université du Vermont et Yoshie Akimoto. Il a également étudié avec Elinor Freer de l'Eastman School of Music et Douglas Humpherys, titulaire de la chaire de piano de l'Eastman. Il est toujours étonné et reconnaissant que quiconque l'accepte dans son studio ou accepte de travailler avec lui.<br><br>
                       
-                       Dans son temps libres, George mange des salades à base de roquette et fait de très longues promenades. Il est souvent en sueur. (Il sait également que son français est assez mauvais. Veuillez pardonner toute erreur et lui envoyer un e-mail avec les corrections. Cours de piano gratuits pour tous ceux qui le font.)</p> 
+                       Dans son temps libre, George mange des salades à base de roquette et fait de très longues promenades. Il est souvent en sueur. (Il sait également que son français est assez mauvais. Veuillez pardonner toute erreur et lui envoyer un e-mail avec les corrections. Cours de piano gratuits pour tous ceux qui le font.)</p> 
         </div>
               </div>     
         <hr/>
