--- a/bio.html
+++ b/bio.html
@@ -95,7 +95,7 @@
                         <li>Green Mountain Chamber Music Festival</li>
                         <li>Foulger International Music Festival</li>
                         <li>Killington Music Festival</li>
-                        <li>International Chamber Music Festival at Bosa Antica, Italy</li>
+                        <li>International Music Festival at Bosa Antica, Italy</li>
                     </ul>
                     <br>
                     
